fix close button on mobile view

--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ button,
   right: 15px;
   font-size: 35px;
   cursor: pointer;
+  z-index: 2;
 }
 
 .modal-content .kuDescription {
